# p2_cg

./: CMakeLists.txt  README.TXT
include/: Actor.h  CentralSphere.h  GoldSphere.h  Ground.h  Intersection.h  MainWindow.h  PlaneShape.h  RayCaster.h  Scene.h  SceneManager.h  Shape3.h  SphereShape.h
lib/windows/: gl3w.lib
src/: Main.cpp  MainWindow.cpp  RayCaster.cpp
